# HyperCPU

./: .bazelignore  .bazelrc  .bazelversion  .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CODESTYLE.md  CONTRIBUTION.md  MODULE.bazel  Makefile  README.md  ROADMAP.md  a.out  compile_commands.json  conandata.yml  conanfile.py  dev_manual.md  roadmap.md  test.cpp
bench/: CMakeLists.txt
bench/instr/: decode.cpp  memory_fetch.cpp
bench/memory_fetch/: memory_fetch.cpp
src/: BUILD.bazel  CMakeLists.txt  Exit.hpp  NotImplemented.hpp  Version.hpp  allowed_operand_types.cpp  cpu.cpp  instructions.cpp  io_ops.cpp  opcode_handler.cpp  pch.hpp  read_ops.cpp  version.hpp
src/Assembler/: BUILD.bazel  CMakeLists.txt  Main.cpp
src/Assembler/Core/: BinaryTransformer.cpp  BinaryTransformer.hpp  Compiler.cpp  Compiler.hpp  DirectiveAssoc.hpp  ModeNameAssoc.hpp  OpcodeNameAssoc.hpp  Parsers.cpp  Preprocessor.cpp  Preprocessor.hpp  RegNameAssoc.hpp  StatementCompilers.cpp  Tokenizers.cpp
src/Assembler/Main/: BacktraceProvider.cpp  BacktraceProvider.hpp  Main.cpp
src/Assembler/Utils/: Extension.hpp  extension.hpp
src/BacktraceProvider/: BUILD.bazel  BacktraceProvider.cpp  BacktraceProvider.hpp  CMakeLists.txt
src/Common/: BUILD.bazel  CMakeLists.txt  Defs.hpp  Exit.hpp  NotImplemented.hpp  Version.hpp
src/Common/Helpers/: Classes.hpp
src/Common/LanguageSpec/: AllowedFlags.hpp  Flags.hpp  Opcodes.hpp  Registers.hpp
src/Emulator/: BUILD.bazel  CMakeLists.txt  Main.cpp
src/Emulator/Core/CPU/: ALU.hpp  Assert.hpp  CPU.cpp  CPU.hpp  OperandsEvaluation.cpp  Stack.cpp  Util.hpp
src/Emulator/Core/MemoryController/: IMemoryController.hpp  MemoryControllerMT.hpp  MemoryControllerST.hpp
src/Emulator/Main/: ExceptionHandling.cpp  ExceptionHandling.hpp  Main.cpp  Main.hpp
src/Emulator/Misc/: bit_cast.hpp  byteswap.hpp  deref.hpp  overflow.hpp  print.hpp  underflow.hpp  unreachable.hpp
src/Logger/: BUILD.bazel  Colors.hpp  Logger.hpp
src/PCH/: BUILD.bazel  CMakeLists.txt  CStd.hpp
src/Pog/: Action.hpp  Automaton.hpp  BUILD.bazel  CMakeLists.txt  DigraphAlgo.hpp  Errors.hpp  FilterView.hpp  Grammar.hpp  HTMLReport.hpp  Item.hpp  LineSpecialization.hpp  Parser.hpp  ParserReport.hpp  ParsingTable.hpp  Pog.hpp  Precedence.hpp  Rule.hpp  RuleBuilder.hpp  State.hpp  Symbol.hpp  Token.hpp  TokenBuilder.hpp  Tokenizer.hpp  Utils.hpp
src/Pog/Operations/: Follow.hpp  Lookahead.hpp  Operation.hpp  Read.hpp
src/Pog/Relations/: Includes.hpp  Lookback.hpp  Relation.hpp
src/Pog/Types/: StateAndRule.hpp  StateAndSymbol.hpp
src/assembler/: reg_name_assoc.cpp
src/assembler/core/: binary_transformer.cpp  binary_transformer.hpp  compiler.cpp  compiler.hpp  opcode_name_assoc.cpp  opcode_name_assoc.hpp  parsers.cpp  reg_name_assoc.cpp  reg_name_assoc.hpp  statement_compilers.cpp  tokenizers.cpp
src/assembler/main/: main.cpp
src/core/: cpu.cpp  cpu.hpp  exceptions.cpp  instructions.cpp  opcode_handler.cpp
src/core/cpu/: assert.hpp  cpu.cpp  cpu.hpp  operands_eval.cpp  stack.cpp
src/core/cpu/decode/: decoder.cpp  decoder.hpp  i_decoder.hpp
src/core/cpu/fetch/: fetcher.cpp  fetcher.hpp  i_fetcher.hpp
src/core/cpu/instructions/: allowed_modes.cpp  allowed_modes.hpp  flags.hpp  opcodes.hpp  registers.hpp
src/core/cpu/instructions_impl/: adc_impl.cpp  add_impl.cpp  and_impl.cpp  andn_impl.cpp  bswap_impl.cpp  call_impl.cpp  ccrf_impl.cpp  covf_impl.cpp  div_impl.cpp  halt_impl.cpp  hid_impl.cpp  instructions.hpp  intr_impl.cpp  loivt_impl.cpp  mov_impl.cpp  or_impl.cpp
src/core/cpu/interrupts/: interrupt_handler.cpp  reserved_interrupts.hpp
src/core/gdt/: gdt.cpp
src/core/helpers/: io_ops.cpp  stack.cpp
src/core/idt/: idt.cpp  interrupts.cpp
src/core/memory/: memory_access_controller.cpp
src/core/memory_controller/: i_memory_controller.hpp  memory_controller_mt.hpp  memory_controller_st.hpp
src/core/tables/: gdt.cpp
src/emulator/core/cpu/: cpu.cpp  cpu.hpp  operands_eval.cpp  version.hpp
src/emulator/core/memory_controller/: i_memory_controller.hpp  memory_controller_mt.hpp  memory_controller_st.hpp
src/emulator/misc/: deref.hpp
src/logger/: colors.hpp  logger.cpp  logger.hpp
src/misc/: bit_cast.hpp  deref.hpp  overflow.hpp
test/: CMakeLists.txt  fixtures.hpp  main.cpp  pch.hpp  test  tests.cpp
test/Integration/: CMakeLists.txt
test/Integration/AssemblerCore/: AssemblerFail.cpp  AssemblerSuccess.cpp  BinaryTransformerFail.cpp  BinaryTransformerSuccess.cpp  FullAssembler.cpp  TwoOperandsSuccess.cpp
test/Integration/EmulatorCore/CPU/: CPU_ADC.cpp  CPU_ADD.cpp  CPU_AND.cpp  CPU_ANDN.cpp  CPU_BSWAP.cpp  CPU_CALL.cpp  CPU_CALLE.cpp  CPU_CCRF.cpp  CPU_CMP.cpp  CPU_COVF.cpp  CPU_CUDF.cpp  CPU_DEC.cpp  CPU_DIV.cpp  CPU_HID.cpp  CPU_INC.cpp  CPU_INTR.cpp  CPU_JME.cpp  CPU_JMGR.cpp  CPU_JML.cpp  CPU_JMP.cpp  CPU_LOIVT.cpp  CPU_MOV.cpp  CPU_MUL.cpp  CPU_OR.cpp  CPU_POP.cpp  (+7 more)
test/Modular/: CMakeLists.txt
test/core/cpu_init/: cpu_init.cpp
test/core/fetch/: test_fetcher.cpp
test/core/memory_controller/: test_memory_controller_mt.cpp  test_memory_controller_st.cpp
test/idt/: idt.cpp
test/instructions/: adc.cpp  add.cpp  and.cpp  andn.cpp  bswp.cpp  call.cpp  clc.cpp  cmp.cpp  dec.cpp  hlt.cpp  inc.cpp  info.cpp  je.cpp  jg.cpp  jge.cpp  jl.cpp  jle.cpp  jmp.cpp  mov.cpp  mul.cpp  pop.cpp  push.cpp  ret.cpp  sub.cpp
test/integration/assembler-core/: test_assembler_binary_transformer_fail.cpp  test_assembler_binary_transformer_success.cpp
tests/: BUILD.bazel  CMakeLists.txt  fixtures.hpp  gtest.hpp  main.cpp
tests/Integration/: BUILD.bazel  CMakeLists.txt
tests/Integration/AssemblerCore/: AssemblerFail.cpp  AssemblerSuccess.cpp  FullAssembler.cpp  TwoOperandsSuccess.cpp
tests/Modular/: BUILD.bazel  CMakeLists.txt
tests/Pog/: Automaton.cpp  BUILD.bazel  CMakeLists.txt  FilterView.cpp  Grammar.cpp  Item.cpp  Parser.cpp  ParsingTable.cpp  Precedence.cpp  Rule.cpp  RuleBuilder.cpp  State.cpp  Symbol.cpp  Token.cpp  TokenBuilder.cpp  Tokenizer.cpp  Utils.cpp
tests/Python/Buildsystem/: CMakeLists.txt  test_build.py
(+894 files in other folders)
