'Top level build configuration, use for tooling only'

load('@aspect_rules_lint//format:defs.bzl', 'format_multirun')
load('@hedron_compile_commands//:refresh_compile_commands.bzl', 'refresh_compile_commands')

package(
    default_visibility = [
        '//visibility:private',
    ],
)

config_setting(
    name = 'linux',
    constraint_values = ['@platforms//os:linux']
)

refresh_compile_commands(
    name = 'refresh_compile_commands',
    targets = {
        '//src/...': '--config=linux-dbg',
        '//tests/...': '--config=linux-dbg'
    }
    # I hope they will support this at some point
    # targets = select(
    #     {
    #         ':linux': {
    #             '//src/...': '--config=linux-dbg',
    #             '//tests/...': '--config=linux-dbg'
    #         }
    #     },
    #     no_match_error = 'Could not determine host OS toolchain flags, running this target is pointless'
    # )
)

format_multirun(
    name = 'format',
    cc = '@llvm_toolchain//:bin/clang-format',
    python = '@aspect_rules_lint//format:ruff',
    starlark = '@buildifier_prebuilt//:buildifier',
    print_command = True
)
