"HyperCPU"

module(
    name = "hyper-cpu",
    version = "0.4.15",
    compatibility_level = 1,
)

# We use conan for deps management
conan = use_extension("//conan:conan_deps_module_extension.bzl", "conan_extension")
use_repo(
    conan,
    "abseil",
    "argparse",
    "benchmark",
    "boost",
    "bzip2",
    "eternal",
    "fmt",
    "gtest",
    "libbacktrace",
    "libunwind",
    "re2",
    "spdlog",
    "xz_utils",
    "zlib",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "aspect_rules_lint", version = "1.3.5")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.0.3", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# We use this for static analysis
bazel_dep(name = "toolchains_llvm", version = "1.4.0", dev_dependency = True)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain")
