load('@rules_cc//cc:defs.bzl', 'cc_library')
load('//tools/bazel:pch.bzl', 'precompiled_headers')

package(
    default_visibility = [
        '//tests:__subpackages__',
    ],
)

precompiled_headers(
    name = 'pch_gtest',
    main = 'gtest.hpp',
    deps = [
        '@gtest//:gtest-libgtest'
    ]
)

cc_library(
    name = 'test_fixtures',
    hdrs = ['fixtures.hpp'],
    deps = [
        '//src/PCH:pch_cstd'
    ]
)
