load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = [
        "//tests:__subpackages__",
    ],
)

cc_library(
    name = "pch_gtest",
    hdrs = ["gtest.hpp"],
    deps = [
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "test_fixtures",
    hdrs = ["fixtures.hpp"],
    deps = [
        "//src/PCH:pch_cstd",
    ],
)
