load('@rules_cc//cc:defs.bzl', 'cc_library', 'cc_binary')

cc_library(
    name = 'assembler_core',
    srcs = glob(['**/*.cpp'], exclude = ['Main.cpp']),
    hdrs = glob(['**/*.hpp']),
    deps = [
        '@fmt//:fmt',
        '@re2//:re2',
        '@eternal//:eternal',
        '@spdlog//:spdlog',
        '//dist:hpool',
        '//src/PCH:pch_cstd',
        '//src/Pog:pog',
        '//src/Common:hcpu_common'
    ],
    visibility = ['//visibility:public']
)

cc_binary(
    name = 'hcasm',
    srcs = ['Main.cpp'],
    deps = [
        '@argparse//:argparse',
        ':assembler_core'
    ],
    visibility = ['//visibility:private']
)
