load('@rules_cc//cc:defs.bzl', 'cc_library')


cc_library(
    name = 'backtrace_provider',
    srcs = [
        'BacktraceProvider.cpp'
    ],
    hdrs = [
        'BacktraceProvider.hpp'
    ],
    strip_include_prefix = '/src',
    deps = [
        '@fmt//:fmt',
        '//src/PCH:pch_cstd',
        '@libbacktrace//:libbacktrace',
        '@libunwind//:libunwind',
    ]
)
