load('@rules_cc//cc:defs.bzl', 'cc_library')

cc_library(
    name = 'backtrace_provider',
    srcs = ['BacktraceProvider.cpp'],
    hdrs = ['BacktraceProvider.hpp'],
    deps = [
        '@fmt//:fmt',
        '@libbacktrace//:libbacktrace',
        '@libunwind//:libunwind',
        '//src/PCH:pch_cstd'
    ],
    visibility = ['//visibility:public']
)
