load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "backtrace_provider",
    srcs = ["BacktraceProvider.cpp"],
    hdrs = ["BacktraceProvider.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/PCH:pch_cstd",
        "@fmt",
        "@libbacktrace",
        "@libunwind",
    ],
)
