load('@rules_cc//cc:defs.bzl', 'cc_library', 'cc_binary')

cc_library(
    name = 'emulator_core',
    srcs = glob(['**/*.cpp'], exclude = ['Main.cpp']),
    hdrs = glob(['**/*.hpp']),
    visibility = [
        '//tests:__subpackages__'
    ],
    deps = [
        '@fmt//:fmt',
        '@argparse//:argparse',
        '@eternal//:eternal',
        '//src/Assembler:assembler_core',
        '//src/PCH:pch_cstd',
        '//src/Pog:pog'
    ]
)

cc_binary(
    name = 'hcemul',
    srcs = ['Main.cpp'],
    deps = [
        ':emulator_core'
    ]
)
