load('@rules_cc//cc:defs.bzl', 'cc_library')
load('//tools/bazel:pch.bzl', 'precompiled_headers')

package(
    default_visibility = [
        '//:__subpackages__',
    ],
)

cc_library(
    name = 'pog_core',
    hdrs = glob(['**/*.hpp'], exclude = ['Pog.hpp'])
)

precompiled_headers(
    name = 'pog',
    main = 'Pog.hpp',
    deps = [
        ':pog_core'
    ]
)
