load('@rules_cc//cc:defs.bzl', 'cc_library')
load('//tools/bazel:pch.bzl', 'precompiled_headers')

cc_library(
    name = 'pog_core',
    hdrs = glob(['**/*.hpp'], exclude = ['Pog.hpp']),
    deps = [
        '@re2//:re2',
        '@fmt//:fmt'
    ],
    visibility = ['//visibility:private']
)

precompiled_headers(
    name = 'pog',
    main = 'Pog.hpp',
    deps = [
        ':pog_core'
    ],
    visibility = ['//visibility:public']
)
