load('@rules_cc//cc:defs.bzl', 'cc_test')


cc_test(
    name = 'integration-test',
    srcs = glob(['**/*.cpp']),
    deps = [
        '//src/PCH:pch_cstd',
        '//tests:pch_gtest',
        '//src/Assembler:assembler_core',
        '//src/Emulator:emulator_core',
        '//tests:test_fixtures',
        '@gtest//:gtest',
        '@fmt//:fmt'
    ]
)
