load('@rules_cc//cc:defs.bzl', 'cc_test')

cc_test(
    name = 'modular-test',
    linkstatic = True,
    # TODO: remove when tests are fixed
    srcs = glob(['**/*.cpp'], exclude = ['EmulatorCore/Decoding/**/*.cpp']),
    deps = [
        '@gtest//:gtest-gmock_main',
        '@fmt//:fmt',
        '//tests:pch_gtest',
        '//tests:test_fixtures',
        '//src/PCH:pch_cstd',
        '//src/Assembler:assembler_core',
        '//src/Emulator:emulator_core',
    ]
)
